--- a/site-teste/index.html
+++ b/site-teste/index.html
@@ -5,11 +5,21 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Chelsea, o maior clube inglês! teste</title>
+    <style>
+        H1{font-family: Arial;
+            font-size: 30;
+            color: teal;
+
+         }
+
+    
+    </style>
 </head>
 <body>
     <hgroup> <h1>Chelsea Cabuloso</h1>
         <h2>O terror do United</h2>
     </hgroup>
+
     <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit.
          Neque expedita eum vero culpa nam impedit. 
          Laborum, est quisquam. Veniam, recusandae. 
