--- a/site-teste/index.html
+++ b/site-teste/index.html
@@ -8,9 +8,8 @@
     <style>
         H1{font-family: Arial;
             font-size: 30;
-            color: teal;
-
-         }
+            color:darkblue
+            }
     </style>
 </head>
 <body>
