--- a/site-teste/index.html
+++ b/site-teste/index.html
@@ -15,6 +15,7 @@
 <body>
     <hgroup> <h1>Chelsea Cabuloso</h1>
         <h2>O terror do United</h2>
+        <h3>Lukaku é rei, vai ser artilheiro de tudo!</h3>
     </hgroup>
 
     <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit.
